feat: harden assessment trust and define RHBK operations roadmap
Enforce target-scoped authorization and trustworthy partial assessments; harden controlled change integrity and report provenance; document January demo readiness, IAM reporting, and isolated SPI assurance.

Validated with Java 21 via jenv: 280 backend tests, 69 UI tests, 7 live Keycloak/RHBK integration tests, packaged MCP/REST smoke. OpenShift and real OIDC validation remain roadmap gates.